[package]
name = "sdformat-rs"
version = "0.1.0"
authors = ["nekanat <nekanat.stock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde-xml-rs = "0.5.0"
RustyXML = "0.3.0"
thiserror = "1.0.29"
num-traits = "0.2.14"
